[FIX] resolve confusing colors in languages stats by insert a gap
现在的language stats配色太迷, 相近色总是挨在一起, 去找配色生成的地方有点麻烦, 所以直接学github加个gap就好了

--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -2050,6 +2050,7 @@
 
 .repository .repository-summary .segment.language-stats {
   display: flex;
+  gap: 2px;
   padding: 0;
   height: 10px;
   white-space: nowrap;
